@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST jpeginfo-1.6.0.tar.gz 64772 RMD160 d33d03e126df90e611533d24d6a3f1fdde945c88 SHA1 198814d72020c967272b36c6b64711b66cdf6e01 SHA256 56dfc8efc54cb79047746cc98e94ca5f89c31645348f35a4053ed7e85d67bc3c
-EBUILD jpeginfo-1.6.0.ebuild 705 RMD160 1accc7f271156ae390b72afbb4638e40eaff186f SHA1 6ebe32491ad20f88e056c3339c377215542532ae SHA256 eb122ab0a935e353f14f0fb78212f3a928445c2c669f1164d6059eb125249fc7
-MISC ChangeLog 1797 RMD160 61d3730f25b67fe44cfe065358cdba37d949982f SHA1 e8abcf12629b1a3fe444962396170f04a3d41724 SHA256 870cec0229d9d4255b5d4e98aaac41746d986c025469ef2c235ed891bbc43861
+EBUILD jpeginfo-1.6.0.ebuild 731 RMD160 e76c43fcb8b50a1dbb34eadba46e1cfc1d6f4ae3 SHA1 b13f141b09d76bf6e46d0cbe08c5dc497c6fc03a SHA256 506f4dbfcaa6676540b08c223db10fa91c59182bb342ed5338b0cab254bff34f
+MISC ChangeLog 1921 RMD160 5b820c0e4266406e8ff59cf5cb229b6901fb7759 SHA1 b3d3efda71ea957a0826e2a3446e137492cfcced SHA256 4bce878f914b0e177550e407684cfa8c96ec8ca14f491b21e5f1b5006434e801
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAksPvbwACgkQAiZjviIA2XgE9gCePh9t2WT4cJPM26BjjRFqOO9Y
+xXsAoOK7Vio789Ilbu1ATmZHyierHjdA
+=U0PO
+-----END PGP SIGNATURE-----
