@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/jpeginfo
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/jpeginfo/ChangeLog,v 1.15 2008/11/27 22:18:56 jer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/jpeginfo/ChangeLog,v 1.16 2009/11/27 11:53:53 flameeyes Exp $
+
+  27 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  jpeginfo-1.6.0.ebuild:
+  Use -j1 for install, bug #294820.
 
   27 Nov 2008; Jeroen Roovers <jer@gentoo.org> jpeginfo-1.6.0.ebuild:
   Hmm, better not do tc-export in global scope.
